added docker files and db setup etc. also improved some CSS and responsive UI

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,15 @@
+# Database configuration
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=password
+DB_USER=crawler
+DB_PASSWORD=crawlerpassword
 DB_NAME=webcrawler
-JWT_SECRET=your-secret-key-change-this-in-production
+
+# JWT configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# Server configuration
 PORT=8080
+
+# Environment
+ENV=development
